# Clap-Agents

./: README.md  changelog.md  chroma-core-chroma.txt  pyproject.toml
examples/: CLAP-TEST-SUITE.py  all_func.py  calc_test.py  email_test.py  huge_rag.py  local_rag.py  qdrant.md  qdrant_ingestion.py  rag_all_functionalities.py  scraping_test.py  simple_react_agent.py
examples/clap_suite_dbs/google_chroma_default_db/: chroma.sqlite3
examples/clap_suite_dbs/google_st_ef_google_chroma_st/793d67ec-9626-47d6-89ba-d36ada98d82b/: index_metadata.pickle
examples/clap_suite_dbs/google_st_ef_google_qdrant_st/: meta.json
examples/clap_suite_dbs/groq_chroma_default_db/dbff0624-543e-496e-a0cf-b982db3cb94d/: index_metadata.pickle
examples/clap_suite_dbs/groq_st_ef_groq_chroma_st/a38e666e-3360-4531-a1b2-86923f6e2c1d/: index_metadata.pickle
examples/clap_suite_dbs/groq_st_ef_groq_qdrant_st/: meta.json
examples/clap_suite_dbs/ollama_chroma_default_db/8f2c2c7a-fb80-45a7-97ed-0021111228e8/: index_metadata.pickle
examples/clap_suite_dbs/ollama_ollamaef_ollama_chroma/: chroma.sqlite3
examples/clap_suite_dbs/ollama_ollamaef_ollama_qdrant/: meta.json
examples/clap_suite_dbs/ollama_st_ef_ollama_qdrant_st/: meta.json
examples/complex_test_chroma_db/: chroma.sqlite3
examples/large_pdf_chroma_db/1f2e7d51-f0aa-4eae-8944-fec0f0dc789c/: index_metadata.pickle
examples/ollama_rag_qdrant_minimal_db/: meta.json
examples/ollama_suite_qdrant_db/: meta.json
examples/qdrant_test_dbs/custom_ef_db/: meta.json
examples/qdrant_test_dbs/fastembed_via_wrapper_db/: meta.json
src/clap/: __init__.py
src/clap/embedding/: __init__.py  fastembed_embedding.py  ollama_embedding.py  sentence_transformer_embedding.py
src/clap/llm_services/: __init__.py  base.py  google_openai_compat_service.py  groq_service.py  ollama_service.py
src/clap/mcp_client/: client.py
src/clap/multiagent_pattern/: agent.py  team.py
src/clap/react_pattern/: react_agent.py
src/clap/tool_pattern/: tool.py  tool_agent.py
src/clap/tools/: email_tools.py  web_crawler.py
src/clap/vector_stores/: __init__.py  base.py  chroma_store.py  qdrant_store.py  weaviate_store.py
(+5 files in other folders)
