

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# --- Core Metadata ---
name = "clap-agents"
version = "0.2.0"
description = "A Python framework for building cognitive agentic patterns including ReAct agents, Multi-Agent Teams, native tool calling, and MCP client integration."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Maitreya Mishra", email = "maitreyamishra04@gmail.com" },
    
]
keywords = [
    "ai",
    "agent",
    "llm",
    "agentic",
    "react",
    "multi-agent",
    "framework",
    "tool calling",
    "mcp",
    "agentic systems",
]
# Standard PyPI classifiers
classifiers = [
    "Development Status :: 3 - Alpha", # Or Beta, Production/Stable
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    "anyio>=4.5",
    "colorama",
    "groq",
    "openai>=1.0.0",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "mcp>=1.2.0",  
    "jsonschema",
    "requests",
    "duckduckgo-search",
    "pydantic>=2.7.2,<3.0.0",
    "sentence-transformers",
    "pypdf",
]

[project.optional-dependencies]
ollama = ["ollama>=0.2.0"]
pandas = ["pandas"]
viz = ["graphviz"]
standard_tools = ["crawl4ai"]
all = ["CLAP[viz, standard_tools]"]
qdrant = ["qdrant-client[fastembed]>=1.7.0"]
pinecone = ["pinecone-client>=3.0.0"]
chromadb = ["chromadb>=0.5.0"]

[project.urls]
Homepage = "https://github.com/MaitreyaM/CLAP-AGENTS.git" 
Repository = "https://github.com/MaitreyaM/CLAP-AGENTS.git"
Issues = "https://github.com/MaitreyaM/CLAP-AGENTS.git/issues"


[tool.hatch.build.targets.wheel]
# Tells hatchling the package code is in the 'src/clap' directory
packages = ["src/clap"]

